# adaptagrams

./: CMakeLists.txt
cola/libavoid/: CMakeLists.txt
